# pyro

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  grammar.ebnf  rustfmt.toml
pyro_syntax_vscode_plugin/: package.json  pyro_syntax_readme.md
pyro_syntax_vscode_plugin/syntaxes/: pyro.tmLanguage.json
src/: ast.rs  class.rs  code_generator.rs  common_utils.rs  compiler.rs  error.rs  function.rs  lexer.rs  macros.rs  main.rs  statement.rs
staticlib/: builtins.rs
test_programs/: simple_main.pyro  test_assign_bool.pyro  test_assign_float.pyro  test_assign_int.pyro  test_assign_to_field.pyro  test_ast_error.pyro  test_class_methods.pyro  test_comments.pyro  test_create_boolean_array.pyro  test_create_class.pyro  test_create_float_array.pyro  test_create_int_array.pyro  test_create_string_array.pyro  test_declare_multiple_classes.pyro  test_delete_array.pyro  test_delete_class.pyro  test_error_delete.pyro  test_float_arithmetic.pyro  test_float_equals.pyro  test_float_less_and_greater_than.pyro  test_for_loop.pyro  test_if_else_statement.pyro  test_if_statement.pyro  test_int_arithmetic.pyro  test_int_equals.pyro  test_int_less_and_greater_than.pyro  test_lexer_error.pyro  test_return_float.pyro  test_return_string.pyro  test_variable_assignment.pyro  test_while_loop.pyro
