[package]
name = "pyro"
version = "0.1.0"
edition = "2021"
author = "Casper Winsnes"
about = "Compiler for the Pyro programming language"

[dependencies]
lazy_static = "1.4.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
llvm-sys = "140"
regex = "1.9.1"
tempfile = "3.5.0"
libc = "0.2"
rand = "0.8"
clap = {version = "4.3.19", features=["derive"]}

[lib]
path = "staticlib/builtins.rs"
name = "pyro_st"
crate-type = ["cdylib"]